--- a/fall-2024_exercises/day1/exercises-basicpython/exercise-basicpython.ipynb
+++ b/fall-2024_exercises/day1/exercises-basicpython/exercise-basicpython.ipynb
@@ -59,7 +59,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "names = [\"Alice\", \"Bob\", \"Carol\"]\n",
+    "office = [\"020222\", \"030111\", \"040444\"]\n",
+    "mobile = [\"0666666\", \"0622222\", \"0644444\"]"
+   ]
   },
   {
    "cell_type": "markdown",
