--- a/fall-2024_exercises/day1/exercises-vectorizers/Understanding_vectorizers.ipynb
+++ b/fall-2024_exercises/day1/exercises-vectorizers/Understanding_vectorizers.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d6288fa8",
    "metadata": {},
    "outputs": [],
@@ -39,10 +39,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "49495cfd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   are  everybody  hello  how  students  today  what  you\n",
+      "0    0          0      1    0         1      0     0    0\n",
+      "1    1          0      0    1         0      1     0    1\n",
+      "2    0          0      0    0         0      0     1    0\n",
+      "3    0          1      2    0         0      0     0    0\n"
+     ]
+    }
+   ],
    "source": [
     "texts = [\"hello students!\", \"how are you today?\", \"what?\", \"hello hello everybody\"]\n",
     "vect = CountVectorizer()# initialize the vectorizer\n",
