--- a/fall-2024_slides/day1/day1-morning.tex
+++ b/fall-2024_slides/day1/day1-morning.tex
@@ -99,8 +99,8 @@
 
 
 \title[Big Data and Automated Content Analysis]{\textbf{A Practical Introduction to Machine Learning in Python} \\Day 1 - Monday  Morning\\ »Introduction«}
-\author[Damian Trilling, Anne Kroon]{Damian Trilling \\ Anne Kroon \\ ~ \\ \footnotesize{d.c.trilling@uva.nl, @damian0604 \\a.c.kroon@uva.nl, @annekroon} \\}
-\date{September 25, 2023}
+\author[Rupert Kiddle, Marieke van Hoof]{Rupert Kiddle \\ Marieke van Hoof \\ ~ \\ \footnotesize{r.t.kiddle@vu.nl   \\m.vanhoof@uva.nl} \\}
+\date{September 16, 2024}
 \institute[Gesis]{Gesis}
 
 \begin{document}
@@ -127,7 +127,7 @@ minimum height=2em, text width=4em, text centered,]
 
 \begin{frame} 
 All course materials can be found at\ldots \\
-~~~~~~~~\url{https://github.com/annekroon/gesis-machine-learning/fall-2023}
+~~~~~~~~\url{https://github.com/annekroon/gesis-machine-learning/fall-2024}
 \end{frame}
 
 \section{Introducing\ldots}
@@ -139,36 +139,41 @@ Introducing\ldots \\
 \end{frame}
 
 
-\begin{frame}{Introducing\ldots} {\huge{Damian}} \small{} 
+\begin{frame}{Introducing\ldots} {\huge{Rupert}} \small{} 
 
 \begin{columns}
 	\column{.3\textwidth}
 	\makebox[\columnwidth]{
-		\includegraphics[width=\columnwidth,height=\paperheight,keepaspectratio]{../pictures/damian.jpg}}
+		\includegraphics[width=\columnwidth,height=\paperheight,keepaspectratio]{../pictures/rupert.jpg}}
 	\column{.7\textwidth}
-	dr. Damian Trilling \\
-	Associate Professor Political Communication \& Journalism \\
+	Rupert Kiddle\\
+	PhD Candidate: Computational Communication Science (RM SocSci, BSc PolSci, BSc Neurosci)\\
 	\begin{itemize}
 		%\item Studied Communication Science in M\"unster and at the VU 2003--2009
 		%\item PhD candidate @ ASCoR 2009--2012
-		\item interested in political communication and journalism in a changing media environment and in innovative (digital, large-scale, computational) research methods
+		\item Vrije University Amsterdam, Journalism
+  \item interested in (digital) journalism, language modelling and news recommendation.
 	\end{itemize}
-	@damian0604 \textbar d.c.trilling@uva.nl \textbar \url{www.damiantrilling.net} 
+	@rptkiddle \textbar r.t.kiddle@vu.nl 
 \end{columns}
 \end{frame}
 
-\begin{frame}{Introducing\ldots} {\huge{Anne}} \small{} 
-\begin{columns}[] \column{.3\textwidth} \makebox[\columnwidth]{ \includegraphics[width=\columnwidth,height=\paperheight,keepaspectratio]{../pictures/anne.jpg}} \column{.7\textwidth} dr. Anne Kroon \\ 
-Assistant Professor Corporate Communication
+\begin{frame}{Introducing\ldots} {\huge{Marieke}} \small{} 
+\begin{columns}[] \column{.3\textwidth} \makebox[\columnwidth]{ \includegraphics[width=\columnwidth,height=\paperheight,keepaspectratio]{../pictures/Marieke_klein.jpg}} \column{.7\textwidth} Marieke van Hoof \\ 
+Postdoctoral researcher AI \& Politics (PhD PolCom, RM SocSci, BSc Sociology)
 \begin{itemize} 
-	%\item Studied Journalism and Communication,  2006 - 2013
-	%\item PhD candidate corporate communication at ASCoR (University of Amsterdam), 2014 - 2017
-	\item Research focus on biased AI in recruitment, and media bias regarding minorities
-	\item text analysis using automated approaches, word embeddings
-\end{itemize} @annekroon \textbar a.c.kroon@uva.nl  \textbar \url{http://www.uva.nl/profiel/k/r/a.c.kroon/a.c.kroon.html} 
+    \item Amsterdam School of Communication Research, University of Amsterdam
+	\item Research focused on the role of AI and algorithms in political information diets
+	\item Traditional methods (e.g., surveys, experiments) \& text analysis using automated approaches
+\end{itemize} @marieke\_vh \textbar m.vanhoof@uva.nl 
 \end{columns} 
 \end{frame}
 
+\begin{frame}{Introducing\ldots} {\huge{Damian \& Anne}} \small{} 
+\begin{columns}[] \column{.5\textwidth} \makebox[\columnwidth]{ \includegraphics[width=\columnwidth,height=\paperheight,keepaspectratio]{../pictures/damian.jpg}} \\ prof. dr. Damian Trilling \\ Vrije Universiteit Amsterdam
+\column{.5\textwidth} \makebox[\columnwidth]{ \includegraphics[width=\columnwidth,height=\paperheight,keepaspectratio]{../pictures/anne.jpg}} \\ dr. Anne Kroon \\ University of Amsterdam
+\end{columns}
+\end{frame}
 
 \begin{frame}{Introducing\ldots}
 {\huge{You}}
@@ -229,7 +234,7 @@ on
 \end{block}
 
 \begin{block}{Which version?}<3->
-Anne and Damian use Python 3.8. Probably everything >3.6 will work, even though slight code modifications may be necesary. \\ 
+We will use 3.10. Generally a good idea to use a recent version, but not the very latest. 
 \end{block}
 \end{frame}
 
