--- a/fall-2024_slides/day2/day2-afternoon.tex
+++ b/fall-2024_slides/day2/day2-afternoon.tex
@@ -102,8 +102,8 @@
 
 
 \title[Big Data and Automated Content Analysis]{\textbf{A Practical Introduction to Machine Learning in Python} \\Day 2 - Tuesday Afternoon \\ »From text to features: Advanced NLP and Regular Expression «}
-\author[Damian Trilling, Anne Kroon]{Damian Trilling \\ Anne Kroon \\ ~ \\ \footnotesize{d.c.trilling@uva.nl, @damian0604 \\a.c.kroon@uva.nl, @annekroon} \\}
-\date{September 26, 2023}
+\author[Rupert Kiddle, Marieke van Hoof]{Rupert Kiddle \\ Marieke van Hoof \\ ~ \\ \footnotesize{r.t.kiddle@vu.nl, @rptkiddle \\ m.vanhoof@uva.nl, @marieke\_vh} \\}
+\date{September 17, 2024}
 \institute[Gesis]{Gesis}
 
 
@@ -286,7 +286,7 @@ Example:
 line="             2 of 25 points"
 result=re.match(" +([0-9]+) of ([0-9]+) points",line)
 if result:
-    print (f"Your points: {}result.group(1)}, Maximum points: {result.group(2)})
+    print (f"Your points: {result.group(1)}, Maximum points: {result.group(2)})
 \end{lstlisting}
 Your points: 2 Maximum points: 25
 \end{frame}
