--- a/fall-2024_slides/day2/day2-morning.tex
+++ b/fall-2024_slides/day2/day2-morning.tex
@@ -117,8 +117,8 @@
 
 
 \title[Big Data and Automated Content Analysis]{\textbf{A Practical Introduction to Machine Learning in Python} \\Day 2 - Tuesday Morning \\ »From text to features: Natural Language Processing«}
-\author[Damian Trilling, Anne Kroon]{Damian Trilling \\ Anne Kroon \\ ~ \\ \footnotesize{d.c.trilling@uva.nl, @damian0604 \\a.c.kroon@uva.nl, @annekroon} \\}
-\date{September 26, 2023}
+\author[Rupert Kiddle, Marieke van Hoof]{Rupert Kiddle \\ Marieke van Hoof \\ ~ \\ \footnotesize{r.t.kiddle@vu.nl \\m.vanhoof@uva.nl} \\}
+\date{September 16, 2024}
 \institute[Gesis]{Gesis}\part{\part{title}}
 
 
