--- a/fall-2024_slides/day3/day3-morning.tex
+++ b/fall-2024_slides/day3/day3-morning.tex
@@ -104,8 +104,8 @@
 \begin{document}
 
 \title[Big Data and Automated Content Analysis]{\textbf{A Practical Introduction to Machine Learning in Python} \\Day 3 - Wednesday \\ »Unsupervised Machine Learning«}
-\author[Damian Trilling, Anne Kroon]{Damian Trilling \\ Anne Kroon \\ ~ \\ \footnotesize{d.c.trilling@uva.nl, @damian0604 \\a.c.kroon@uva.nl, @annekroon} \\}
-\date{September 27, 2023}
+\author[Rupert Kiddle, Marieke van Hoof]{Rupert Kiddle \\ Marieke van Hoof \\ ~ \\ \footnotesize{r.t.kiddle@vu.nl \\m.vanhoof@uva.nl} \\}
+\date{September 16, 2024}
 \institute[Gesis]{Gesis}
 
 
