update day2 afternoon

--- a/fall-2024_exercises/day2/regex_examples.ipynb
+++ b/fall-2024_exercises/day2/regex_examples.ipynb
@@ -26,6 +26,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4d743e47",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pattern = r\"[Pp]ython\"\n",
+    "example_string = \"Python is a programming language, but python is a snake.\"\n",
+    "re.findall(pattern, example_string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "ac3fad21",
    "metadata": {},
    "outputs": [],
@@ -44,9 +56,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#pattern= r\"[^a-zA-Z]+\" #other empty strings represent the sequences of characters that are not alphabetic characters but are separated by spaces\n",
+    "pattern= r\"[^a-zA-Z]+\" #other empty strings represent the sequences of characters that are not alphabetic characters but are separated by spaces\n",
     "#pattern = r\"\\d+\"\n",
-    "pattern = r\"\\W+\"\n",
+    "#pattern = r\"\\W+\"\n",
     "example_string = \"a sentence with stuff in 052953 and so forth!!\"\n",
     "\n",
     "re.findall(pattern, example_string)"
@@ -69,8 +81,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pattern = 'RT ?:? @[a-zA-Z]*'\n",
-    "#pattern = 'RT ?:? @[a-zA-Z0-9]*'\n",
+    "#pattern = 'RT ?:? @[a-zA-Z]*'\n",
+    "pattern = 'RT ?:? @[a-zA-Z0-9]*'\n",
     "#pattern = r'RT ?:? @\\w*'\n",
     "example_string = 'iewjogejiwojg RT @TimSenders395 iegwjo'\n",
     "\n",
