--- a/fall-2024_slides/day2/day2-afternoon.tex
+++ b/fall-2024_slides/day2/day2-afternoon.tex
@@ -180,6 +180,13 @@ Rabobank ORG
 \end{frame}
 
 
+\begin{frame}{Why POS-tag or NER?}
+\begin{itemize}
+    \item As part of your preprocessing pipeline (e.g., filter nouns)
+    \item Enrich your feature set (e.g., number of people in the text carries a lot of information?)
+\end{itemize}
+\end{frame}
+
 
 \begin{frame}{More NLP}
 \url{http://nlp.stanford.edu}
