--- a/fall-2024_exercises/day4/exercises/exercise-afternoon/AFTERNOONCHALLENGE.ipynb
+++ b/fall-2024_exercises/day4/exercises/exercise-afternoon/AFTERNOONCHALLENGE.ipynb
@@ -140,13 +140,10 @@
     "grid = {\n",
     "    'vectorizer__ngram_range' : [(1,1), (1,2)],\n",
     "    'vectorizer__max_df': [0.5, 1.0],\n",
-    "    'vectorizer__min_df': [0, 5],\n",
+    "    'vectorizer__min_df': [1, 5],\n",
     "    'classifier__C': [0.01, 1, 100]\n",
     "}\n",
-    "\n",
-    "# Create a f1 scorer\n",
-    "# macro f1 --> emphasizes the prediction of the smaller classes (in this case: hateful/ spam)\n",
-    "f1_score = make_scorer(f1_score, average='macro') "
+    "\n"
    ]
   },
   {
@@ -157,13 +154,33 @@
    "source": [
     "search = GridSearchCV(estimator=pipeline, # first vectorizer, then classifier\n",
     "                      param_grid=grid, # test these parameters\n",
-    "                      scoring=f1_score,     # note that this is *not* the string 'f1', but the scorer object we constructed above\n",
+    "                      scoring='f1_macro',     # optimise for macro f1 score (note: we want good performance for all classes )\n",
     "                      cv=5, # 5-fold cross validation \n",
     "                      n_jobs=-1,  # use all cpus\n",
     "                      verbose=1) # print some output\n",
     "                      \n",
     "search.fit(X_train, y_train)\n",
     "print(f'Using these hyperparameters {search.best_params_}, we get the best performance.')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save the best model from the grid search\n",
+    "import joblib\n",
+    "joblib.dump(search.best_estimator_, 'best_model.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(classification_report(y_test, search.predict(X_test)))"
    ]
   },
   {
